--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -8,6 +8,6 @@ jobs:
       - name: Get the repository code
         uses: actions/checkout@v3
       - name: Install dependencies
-        run: npm ci
+        run: npm install
       - name: Test application
         run: npm run test
