--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,7 @@ jobs:
         run: npm run test
   lint:
     runs-on: ubuntu-latest
+    needs: test
     steps:
       - name: Get the repository code
         uses: actions/checkout@v3
@@ -21,6 +22,7 @@ jobs:
       - name: Test application
         run: npm run lint
   build:
+    needs: lint
     runs-on: ubuntu-latest
     steps:
       - name: Get the repository code
