--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,9 @@ on:
   push:
     branches:
       - master
+    paths-ignore:
+     - '-github/workflows/pullrequest.yml'
+     - '-github/workflows/deploy.yml'
 
 jobs:
   test:
@@ -10,6 +13,11 @@ jobs:
     steps:
       - name: Get the repository code
         uses: actions/checkout@v3
+      - name: cache deps
+        uses: actions/cache@v3
+        with:
+            path: ~/.npm
+            key: node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependencies
         run: npm install
       - name: Test application
@@ -20,6 +28,11 @@ jobs:
     steps:
       - name: Get the repository code
         uses: actions/checkout@v3
+      - name: cache deps
+        uses: actions/cache@v3
+        with:
+            path: ~/.npm
+            key: node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependencies
         run: npm install
       - name: Test application
@@ -30,6 +43,11 @@ jobs:
     steps:
       - name: Get the repository code
         uses: actions/checkout@v3
+      - name: cache deps
+        uses: actions/cache@v3
+        with:
+            path: ~/.npm
+            key: node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependencies
         run: npm install
       - name: Build application
