--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
             path: ~/.npm
             key: node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependencies
-        run: npm ci
+        run: npm install
       - name: Test application
         run: npm run test
   lint:
@@ -33,7 +33,7 @@ jobs:
             path: ~/.npm
             key: node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependencies
-        run: npm ci
+        run: npm install
       - name: Test application
         run: npm run lint
   build:
@@ -56,6 +56,6 @@ jobs:
             path: ~/.npm
             key: node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependencies
-        run: npm ci
+        run: npm install
       - name: Build application
         run: npm run build
